[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "RL environment for agentic data cleaning"
authors = [
    { name = "Hackathon Developer" }
]
dependencies = [
    "pandas",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "numpy",
    "faker",
    "rich",
    "openenv-core>=0.2.0"
]
requires-python = ">=3.10"

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
